update mlflow examples

--- a/Data-Science/MLflow/bike-sharing-mlflow.ipynb
+++ b/Data-Science/MLflow/bike-sharing-mlflow.ipynb
@@ -27,29 +27,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Configure s3 and MLFlow Details"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "\n",
-    "os.environ[\"AWS_ACCESS_KEY_ID\"] = os.environ['MLFLOW_TRACKING_TOKEN']\n",
-    "os.environ[\"AWS_SECRET_ACCESS_KEY\"] = \"s3\"\n",
-    "os.environ[\"AWS_ENDPOINT_URL\"] = 'http://local-s3-service.ezdata-system.svc.cluster.local:30000'\n",
-    "os.environ[\"MLFLOW_S3_ENDPOINT_URL\"] = os.environ[\"AWS_ENDPOINT_URL\"]\n",
-    "os.environ[\"MLFLOW_S3_IGNORE_TLS\"] = \"true\"\n",
-    "os.environ[\"MLFLOW_TRACKING_INSECURE_TLS\"] = \"true\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Set Experiment"
    ]
   },
@@ -80,6 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"#!pip3 install --proxy <PROXY> pydotplus graphviz \\n\",\n",
     "!pip3 install pydotplus graphviz"
    ]
   },
