--- a/Data-Science/MLflow/bike-sharing-prediction.ipynb
+++ b/Data-Science/MLflow/bike-sharing-prediction.ipynb
@@ -28,56 +28,12 @@
     "    except subprocess.CalledProcessError as e:\n",
     "        print(f\"Deployment failed. Error: {e}\")\n",
     "\n",
-    "\n",
-    "## update kserve-objectstore-s3 secret\n",
-    "with open('kserve/kserve-objectstore-s3-secret.yaml', 'r') as file:\n",
-    "    s3_yaml_data = yaml.safe_load(file)\n",
-    "\n",
-    "# Convert YAML to JSON\n",
-    "s3_json_data = json.dumps(s3_yaml_data)\n",
-    "s3_data = json.loads(s3_json_data)\n",
-    "\n",
-    "s3_data[\"stringData\"][\"AWS_ACCESS_KEY_ID\"] = os.environ['AUTH_TOKEN']\n",
-    "s3_data[\"stringData\"][\"AWS_SECRET_ACCESS_KEY\"] = \"s3\"\n",
-    "\n",
-    "s3_data[\"metadata\"][\"annotations\"][\"serving.kserve.io/s3-endpoint\"] = \"local-s3-service.ezdata-system.svc.cluster.local:30000\"\n",
-    "s3_data[\"metadata\"][\"namespace\"] = os.environ['USER']\n",
-    "\n",
-    "# Save the JSON data to a file\n",
-    "with open('kserve/kserve-objectstore-s3-secret.json', 'w') as file:\n",
-    "    file.write(json.dumps(s3_data))\n",
-    "\n",
-    "# Specify the path to your JSON file\n",
-    "json_file_path = 'kserve/kserve-objectstore-s3-secret.json'\n",
-    "\n",
-    "# Call the function to deploy the Kubernetes resource to kserve service account\n",
-    "deploy_kserve_model(json_file_path)\n",
-    "\n",
-    "## update kserve-minio-secret\n",
-    "with open('kserve/kserve-minio-secret.yaml', 'r') as file:\n",
-    "    sa_yaml_data = yaml.safe_load(file)\n",
-    "\n",
-    "# Convert YAML to JSON\n",
-    "sa_json_data = json.dumps(sa_yaml_data)\n",
-    "sa_data = json.loads(sa_json_data)\n",
-    "\n",
-    "sa_data[\"metadata\"][\"namespace\"] = os.environ['USER']\n",
-    "\n",
-    "# Save the JSON data to a file\n",
-    "with open('kserve/kserve-minio-secret.json', 'w') as file:\n",
-    "    file.write(json.dumps(sa_data))\n",
-    "\n",
-    "# Specify the path to your JSON file\n",
-    "json_file_path = 'kserve/kserve-minio-secret.json'\n",
-    "\n",
-    "# Call the function to deploy the Kubernetes resource to kserve service account\n",
-    "deploy_kserve_model(json_file_path)\n",
-    "\n",
     "###################################################################################\n",
     "## update kserve-mlflow-deploy \n",
     "with open('kserve/kserve-mlflow-deploy.yaml', 'r') as file:\n",
     "    yaml_data = yaml.safe_load(file)\n",
     "\n",
+    "## set model name - tutorial default logs model under experiment name\n",
     "model_name = 'bike-sharing-exp'\n",
     "with open('best-model-uri.txt','r') as f:\n",
     "    storage_uri = f.read()\n",
@@ -119,8 +75,8 @@
     "DOMAIN_NAME = \"svc.cluster.local\" # change this to your domain for external access \n",
     "NAMESPACE = os.environ['USER']\n",
     "DEPLOYMENT_NAME = model_name\n",
-    "MODEL_NAME = DEPLOYMENT_NAME\n",
-    "SVC = f'{DEPLOYMENT_NAME}-predictor-default.{NAMESPACE}.{DOMAIN_NAME}'\n",
+    "MODEL_NAME = \"model\"\n",
+    "SVC = f'{DEPLOYMENT_NAME}-predictor.{NAMESPACE}.{DOMAIN_NAME}'\n",
     "URL = f\"https://{SVC}/v2/models/{MODEL_NAME}/infer\"\n",
     "\n",
     "print(URL)\n",
@@ -143,6 +99,8 @@
     "    }\n",
     "  ]\n",
     "}\n",
+    "\n",
+    "%update_token\n",
     "\n",
     "headers = {\"Authorization\": f\"Bearer {os.environ['AUTH_TOKEN']}\"}\n",
     "\n",
