--- a/Data-Science/MLflow/bike-sharing-mlflow.ipynb
+++ b/Data-Science/MLflow/bike-sharing-mlflow.ipynb
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"#!pip3 install --proxy <PROXY> pydotplus graphviz \\n\",\n",
+    "\"#!pip3 install --proxy <PROXY> pydotplus graphviz\",\n",
     "!pip3 install pydotplus graphviz"
    ]
   },
