update kf mnist example

--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -38,11 +38,12 @@
    "outputs": [],
    "source": [
     "# Specify proxy value if it's should be configured on the cluster\n",
+    "%env http_proxy=http://hpeproxy.its.hpecorp.net:80\n",
     "%env https_proxy=http://hpeproxy.its.hpecorp.net:80\n",
     "\n",
-    "# Install required packages (Kubeflow Pipelines and Katib SDK).\n",
-    "import sys\n",
-    "!{sys.executable} -m pip install \"pyarrow>7.0.0\" \"kfp>=1.8.0,<=1.8.20\" kubeflow-katib==0.12.0"
+    "# # Install required packages (Kubeflow Pipelines and Katib SDK).\n",
+    "# import sys\n",
+    "# !{sys.executable} -m pip install \"pyarrow>7.0.0\" \"kfp>=1.8.0,<=1.8.20\" kubeflow-katib==0.12.0"
    ]
   },
   {
@@ -111,6 +112,42 @@
     "         f2.write(x_test)\n",
     "         f3.write(y_train)\n",
     "         f4.write(y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e20c07d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Proxy settings for jobs\n",
+    "http_proxy = \"http://hpeproxy.its.hpecorp.net:80\"\n",
+    "https_proxy = \"http://hpeproxy.its.hpecorp.net:80\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b85d8c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define env variables based on proxy settings\n",
+    "http_proxy_env = {}\n",
+    "https_proxy_env = {}\n",
+    "\n",
+    "if http_proxy != \"\" :\n",
+    "    http_proxy_env = {\n",
+    "        \"name\": \"http_proxy\",\n",
+    "        \"value\": http_proxy\n",
+    "    }\n",
+    "\n",
+    "if https_proxy != \"\" :\n",
+    "    https_proxy_env = {\n",
+    "        \"name\": \"https_proxy\",\n",
+    "        \"value\": https_proxy\n",
+    "    }"
    ]
   },
   {
@@ -193,7 +230,12 @@
     "                                            \"mountPath\": mnt_path,\n",
     "                                            \"name\": \"data-volume\"\n",
     "                                        }\n",
+    "                                    ],\n",
+    "                                    \"env\": [\n",
+    "                                        http_proxy_env,\n",
+    "                                        https_proxy_env,\n",
     "                                    ]\n",
+    "                                        \n",
     "                                }\n",
     "                            ],\n",
     "                            \"imagePullSecrets\": [\n",
@@ -239,7 +281,12 @@
     "                                            \"mountPath\": mnt_path,\n",
     "                                            \"name\": \"data-volume\"\n",
     "                                        }\n",
+    "                                    ],\n",
+    "                                    \"env\": [\n",
+    "                                        http_proxy_env,\n",
+    "                                        https_proxy_env,\n",
     "                                    ]\n",
+    "                                    \n",
     "                                }\n",
     "                            ],\n",
     "                            \"imagePullSecrets\": [\n",
@@ -368,7 +415,12 @@
     "                                \"mountPath\": mnt_path,\n",
     "                                \"name\": \"data-volume\"\n",
     "                            }\n",
+    "                        ],\n",
+    "                        \"env\": [\n",
+    "                            http_proxy_env,\n",
+    "                            https_proxy_env,\n",
     "                        ]\n",
+    "                        \n",
     "                    }\n",
     "                ],\n",
     "                \"imagePullSecrets\": [\n",
@@ -421,6 +473,10 @@
     "                                \"name\": \"data-volume\"\n",
     "                            }\n",
     "                        ],\n",
+    "                        \"env\": [\n",
+    "                            http_proxy_env,\n",
+    "                            https_proxy_env,\n",
+    "                        ]\n",
     "                    }\n",
     "                ],\n",
     "                \"imagePullSecrets\": [\n",
@@ -465,6 +521,7 @@
     "    serving_component_url = 'component/kserve-component.yaml'\n",
     "\n",
     "    # Uncomment the following two lines if you are using KFServing v0.6.x or v0.5.x\n",
+    "    \n",
     "    # api_version = 'serving.kubeflow.org/v1beta1'\n",
     "    # serving_component_url = 'component/kfserving-component.yaml'\n",
     "\n",
