--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -39,11 +39,7 @@
    "source": [
     "# Specify proxy value if it's should be configured on the cluster\n",
     "%env http_proxy=http://hpeproxy.its.hpecorp.net:80\n",
-    "%env https_proxy=http://hpeproxy.its.hpecorp.net:80\n",
-    "\n",
-    "# # Install required packages (Kubeflow Pipelines and Katib SDK).\n",
-    "# import sys\n",
-    "# !{sys.executable} -m pip install \"pyarrow>7.0.0\" \"kfp>=1.8.0,<=1.8.20\" kubeflow-katib==0.12.0"
+    "%env https_proxy=http://hpeproxy.its.hpecorp.net:80"
    ]
   },
   {
