--- a/Data-Science/MLflow/bike-sharing-mlflow.ipynb
+++ b/Data-Science/MLflow/bike-sharing-mlflow.ipynb
@@ -58,7 +58,7 @@
    "outputs": [],
    "source": [
     "\"#!pip3 install --proxy <PROXY> pydotplus graphviz\",\n",
-    "!pip3 install pydotplus graphviz"
+    "!pip3 install pydotplus graphviz seaborn"
    ]
   },
   {
