--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -12,34 +12,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e944a50e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "######################################### E2E Demo example precondition ##############################################\n",
-    "\n",
-    "# You need to generate secret to have ability read datasource files from S3 bucket by Spark application (Airflow DAG)\n",
-    "# Copy template \"object_store_secret.yaml.tpl\" from shared/ezua-tutorials/Data-Analytics/Spark directory to e.g. user folder\n",
-    "\n",
-    "import kfp\n",
-    "\n",
-    "kfp_client = kfp.Client()\n",
-    "namespace = kfp_client.get_user_namespace()\n",
-    "\n",
-    "!sed -e \"s/\\$AUTH_TOKEN/$AUTH_TOKEN/\" /mnt/user/object_store_secret.yaml.tpl > /tmp/object_store_secret.yaml\n",
-    "!kubectl apply -f /tmp/object_store_secret.yaml -n {namespace}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "89bb0c90-a09f-4197-b9a2-f7558efb31de",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Specify proxy value if it's should be configured on the cluster\n",
-    "%env http_proxy=http://hpeproxy.its.hpecorp.net:80\n",
-    "%env https_proxy=http://hpeproxy.its.hpecorp.net:80"
+    "%env https_proxy=http://hpeproxy.its.hpecorp.net:80\n",
+    "# Install required packages (Kubeflow Pipelines and Katib SDK).\n",
+    "import sys\n",
+    "!{sys.executable} -m pip install \"pyarrow>7.0.0\" \"kfp>=1.8.0,<=1.8.22\" kubeflow-katib==0.16.0"
    ]
   },
   {
@@ -49,7 +30,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import uuid\n",
+    "import kfp\n",
     "import kfp.dsl as dsl\n",
     "from kfp import components\n",
     "from kubeflow.katib import ApiClient\n",
@@ -69,10 +52,13 @@
     "uuid = uuid.uuid4().hex[:4]\n",
     "\n",
     "# The initial training data is written to the user volume by the spark job in the Apache Parquet format.\n",
-    "initial_training_data_dir = f\"{str(Path.home())}/user/mnist-spark-data\"\n",
+    "initial_training_data_dir = f\"{str(Path.home())}/hpedemo-user01/mnist-spark-data\"\n",
     "\n",
     "# The path is relative, final_training_data_dir should be in the same folder with the notebook\n",
     "final_training_data_dir=f\"training-{uuid}\"\n",
+    "\n",
+    "os.mkdir(\"/mnt/user/\" + final_training_data_dir, 0o777)\n",
+    "# os.chmod(\"/mnt/user/\" + final_training_data_dir, 0o777)\n",
     "\n",
     "######################################## KFP parameters ##################################################\n",
     "\n",
@@ -81,7 +67,11 @@
     "print(f\"Katib experiment name: {name}\")\n",
     "\n",
     "# Number of epoch to train the model\n",
-    "training_steps=\"100\""
+    "training_steps=\"100\"\n",
+    "\n",
+    "\n",
+    "kfp_client = kfp.Client()\n",
+    "namespace = kfp_client.get_user_namespace()"
    ]
   },
   {
@@ -113,37 +103,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e20c07d3",
+   "id": "90bf2234",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Proxy settings for jobs\n",
-    "http_proxy = \"http://hpeproxy.its.hpecorp.net:80\"\n",
-    "https_proxy = \"http://hpeproxy.its.hpecorp.net:80\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5b85d8c8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define env variables based on proxy settings\n",
-    "http_proxy_env = {}\n",
-    "https_proxy_env = {}\n",
-    "\n",
-    "if http_proxy != \"\" :\n",
-    "    http_proxy_env = {\n",
+    "env = [\n",
+    "    {\n",
+    "        \"name\": \"HTTP_PROXY\",\n",
+    "        \"value\": \"http://hpeproxy.its.hpecorp.net:80\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"HTTPS_PROXY\",\n",
+    "        \"value\": \"http://hpeproxy.its.hpecorp.net:80\"\n",
+    "    },\n",
+    "    {\n",
     "        \"name\": \"http_proxy\",\n",
-    "        \"value\": http_proxy\n",
-    "    }\n",
-    "\n",
-    "if https_proxy != \"\" :\n",
-    "    https_proxy_env = {\n",
+    "        \"value\": \"http://hpeproxy.its.hpecorp.net:80\"\n",
+    "    },\n",
+    "    {\n",
     "        \"name\": \"https_proxy\",\n",
-    "        \"value\": https_proxy\n",
-    "    }"
+    "        \"value\": \"http://hpeproxy.its.hpecorp.net:80\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"no_proxy\",\n",
+    "        \"value\": \"10.227.212.69,10.227.0.0/16,10.96.0.1,10.96.0.0/12,10.96.0.12,10.244.0.0/16,10.43.0.0/16,.external.hpe.local,localhost,.cluster.local,.svc,.default.svc,127.0.0.1,mip-bd-vcenter-dev.mip.storage.hpecorp.net,172.20.0.2\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"NO_PROXY\",\n",
+    "        \"value\": \"10.227.212.69,10.227.0.0/16,10.96.0.1,10.96.0.0/12,10.96.0.12,10.244.0.0/16,10.43.0.0/16,.external.hpe.local,localhost,.cluster.local,.svc,.default.svc,127.0.0.1,mip-bd-vcenter-dev.mip.storage.hpecorp.net,172.20.0.2\"\n",
+    "    }\n",
+    "]"
    ]
   },
   {
@@ -218,20 +207,17 @@
     "                                        \"/opt/model.py\",\n",
     "                                        f\"--tf-data-dir={mnt_path}{final_training_data_dir}/\",\n",
     "                                        f\"--tf-train-steps={str(training_steps)}\",\n",
+    "                                        f\"--tf-export-dir={mnt_path}{final_training_data_dir}/\",\n",
     "                                        \"--tf-learning-rate=${trialParameters.learningRate}\",\n",
     "                                        \"--tf-batch-size=${trialParameters.batchSize}\"\n",
     "                                    ],\n",
+    "                                    \"env\": env,\n",
     "                                    \"volumeMounts\": [\n",
     "                                        {\n",
     "                                            \"mountPath\": mnt_path,\n",
     "                                            \"name\": \"data-volume\"\n",
     "                                        }\n",
-    "                                    ],\n",
-    "                                    \"env\": [\n",
-    "                                        http_proxy_env,\n",
-    "                                        https_proxy_env,\n",
     "                                    ]\n",
-    "                                        \n",
     "                                }\n",
     "                            ],\n",
     "                            \"imagePullSecrets\": [\n",
@@ -269,20 +255,17 @@
     "                                        \"/opt/model.py\",\n",
     "                                        f\"--tf-data-dir={mnt_path}{final_training_data_dir}/\",\n",
     "                                        f\"--tf-train-steps={str(training_steps)}\",\n",
+    "                                        f\"--tf-export-dir={mnt_path}{final_training_data_dir}/\",\n",
     "                                        \"--tf-learning-rate=${trialParameters.learningRate}\",\n",
     "                                        \"--tf-batch-size=${trialParameters.batchSize}\"\n",
     "                                    ],\n",
+    "                                    \"env\": env,\n",
     "                                    \"volumeMounts\": [\n",
     "                                        {\n",
     "                                            \"mountPath\": mnt_path,\n",
     "                                            \"name\": \"data-volume\"\n",
     "                                        }\n",
-    "                                    ],\n",
-    "                                    \"env\": [\n",
-    "                                        http_proxy_env,\n",
-    "                                        https_proxy_env,\n",
     "                                    ]\n",
-    "                                    \n",
     "                                }\n",
     "                            ],\n",
     "                            \"imagePullSecrets\": [\n",
@@ -402,6 +385,7 @@
     "                        \"args\": [\n",
     "                            f\"python /opt/model.py --tf-data-dir={mnt_path}{final_training_data_dir}/ --tf-export-dir=/mnt/export --tf-train-steps={training_steps} {best_hps}\"\n",
     "                        ],\n",
+    "                        \"env\": env,\n",
     "                        \"volumeMounts\": [\n",
     "                            {\n",
     "                                \"mountPath\": \"/mnt/export\",\n",
@@ -411,12 +395,7 @@
     "                                \"mountPath\": mnt_path,\n",
     "                                \"name\": \"data-volume\"\n",
     "                            }\n",
-    "                        ],\n",
-    "                        \"env\": [\n",
-    "                            http_proxy_env,\n",
-    "                            https_proxy_env,\n",
     "                        ]\n",
-    "                        \n",
     "                    }\n",
     "                ],\n",
     "                \"imagePullSecrets\": [\n",
@@ -463,15 +442,16 @@
     "                        \"args\": [\n",
     "                          f\"python /opt/model.py --tf-data-dir={mnt_path}{final_training_data_dir}/ --tf-export-dir=/mnt/export --tf-train-steps={training_steps} {best_hps}\" \n",
     "                        ],\n",
+    "                        \"env\": env,\n",
     "                        \"volumeMounts\": [\n",
+    "                            {\n",
+    "                                \"mountPath\": \"/mnt/export\",\n",
+    "                                \"name\": \"model-volume\"\n",
+    "                            },\n",
     "                            {\n",
     "                                \"mountPath\": mnt_path,\n",
     "                                \"name\": \"data-volume\"\n",
     "                            }\n",
-    "                        ],\n",
-    "                        \"env\": [\n",
-    "                            http_proxy_env,\n",
-    "                            https_proxy_env,\n",
     "                        ]\n",
     "                    }\n",
     "                ],\n",
@@ -482,12 +462,18 @@
     "                ],\n",
     "                \"volumes\": [\n",
     "                    {\n",
+    "                        \"name\": \"model-volume\",\n",
+    "                        \"persistentVolumeClaim\": {\n",
+    "                            \"claimName\": str(model_volume_op.outputs[\"name\"])\n",
+    "                        }\n",
+    "                    },\n",
+    "                    {\n",
     "                        \"name\": \"data-volume\",\n",
     "                        \"persistentVolumeClaim\": {\n",
     "                            \"claimName\": \"user-pvc\"\n",
     "                        }\n",
     "                    }\n",
-    "                ],\n",
+    "                ]\n",
     "            }\n",
     "        }\n",
     "    }\n",
@@ -517,7 +503,6 @@
     "    serving_component_url = 'component/kserve-component.yaml'\n",
     "\n",
     "    # Uncomment the following two lines if you are using KFServing v0.6.x or v0.5.x\n",
-    "    \n",
     "    # api_version = 'serving.kubeflow.org/v1beta1'\n",
     "    # serving_component_url = 'component/kfserving-component.yaml'\n",
     "\n",
@@ -603,7 +588,7 @@
     "    json_request = f'{{ \"instances\" : {data_formatted} }}'\n",
     "\n",
     "    # Specify the prediction URL. If you are runing this notebook outside of Kubernetes cluster, you should set the Cluster IP.\n",
-    "    url = f\"http://{name}-predictor-default.{namespace}.svc.cluster.local/v1/models/{name}:predict\"\n",
+    "    url = f\"http://{name}-predictor.{namespace}.svc.cluster.local/v1/models/{name}:predict\"\n",
     "    response = requests.post(url, data=json_request)\n",
     "\n",
     "    print(\"Prediction for the image\")\n",
