change user name

--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -52,7 +52,7 @@
     "uuid = uuid.uuid4().hex[:4]\n",
     "\n",
     "# The initial training data is written to the user volume by the spark job in the Apache Parquet format.\n",
-    "initial_training_data_dir = f\"{str(Path.home())}/hpedemo-user01/mnist-spark-data\"\n",
+    "initial_training_data_dir = f\"{str(Path.home())}/user/mnist-spark-data\"\n",
     "\n",
     "# The path is relative, final_training_data_dir should be in the same folder with the notebook\n",
     "final_training_data_dir=f\"training-{uuid}\"\n",
