EZAF-4067 | entrypoint update

--- a/Data-Science/Ray/Fibonacci/run.ipynb
+++ b/Data-Science/Ray/Fibonacci/run.ipynb
@@ -46,7 +46,8 @@
     "    runtime_env={\n",
     "        \"working_dir\": \"./\", \n",
     "        # \"excludes\": ['']\n",
-    "    }\n",
+    "    },\n",
+    "    entrypoint_num_cpus=1\n",
     ")\n",
     "\n",
     "print(client.__dict__)\n",
