--- a/Data-Science/Ray/Hyperparameter/run.ipynb
+++ b/Data-Science/Ray/Hyperparameter/run.ipynb
@@ -64,12 +64,13 @@
     "# Submit Ray job using JobSubmissionClient\n",
     "client = JobSubmissionClient(ray_address)\n",
     "job_id = client.submit_job(\n",
-    "    entrypoint=\"python h.py\",\n",
+    "    entrypoint=\"python hyperparameter.py\",\n",
     "    runtime_env={\n",
     "        \"working_dir\": \"./\", \n",
     "        #\"entrypoint_memory\": 50000,\n",
     "        #\"excludes\": ['']\n",
-    "    }\n",
+    "    },\n",
+    "    entrypoint_num_cpus=1\n",
     ")\n"
    ]
   },
