--- a/Data-Science/Ray/Ray-RuntimeEnv-Proxy/run_workaround.ipynb
+++ b/Data-Science/Ray/Ray-RuntimeEnv-Proxy/run_workaround.ipynb
@@ -44,7 +44,8 @@
     "        \"working_dir\": \"./\",\n",
     "        \"env_vars\":{\"HTTP_PROXY\": \"http://10.78.90.46:80\", \"HTTPS_PROXY\": \"http://10.78.90.46:80\", \"http_proxy\": \"http://10.78.90.46:80\", \"https_proxy\": \"http://10.78.90.46:80\"}\n",
     "        # \"excludes\": ['']\n",
-    "    }\n",
+    "    },\n",
+    "    entrypoint_num_cpus=1\n",
     ")\n",
     "\n",
     "print(client.__dict__)\n",
