updated Ray-whylogs example to the latest standard

--- a/Data-Science/Ray/Ray-Custome-Storage-Path/run.ipynb
+++ b/Data-Science/Ray/Ray-Custome-Storage-Path/run.ipynb
@@ -43,6 +43,7 @@
     "client = JobSubmissionClient(ray_address)\n",
     "job_id = client.submit_job(\n",
     "    entrypoint=\"python <filename>\",     #Change the filename in entrypoint=\"python filename\" with the file which you need to run.    \n",
+    "    entrypoint_num_cpus=1,\n",
     "    runtime_env={\n",
     "        \"working_dir\": \"./\", \n",
     "        #\"excludes\": ['']\n",
