question-answering: Add proxy instructions
Add a troubleshooting guide that add instructions on how to use a proxy
within a terminal environment, a Notebook, and KServe. This is needed if
the cluster is deployed behind a proxy.

Signed-off-by: Dimitris Poulopoulos <dimitrios.poulopoulos@hpe.com>

--- a/demos/question-answering/01.create-vectorstore.ipynb
+++ b/demos/question-answering/01.create-vectorstore.ipynb
@@ -189,6 +189,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bc2e04cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# If you're running behind a proxy, uncomment the following line and set your proxy URL.\n",
+    "# os.environ[\"https_proxy\"] = \"<your https proxy URL>\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "719391de-6f29-4234-9f40-cbb10e9da7d5",
    "metadata": {
     "tags": []
