--- a/demos/question-answering/02.serve-vectorstore.ipynb
+++ b/demos/question-answering/02.serve-vectorstore.ipynb
@@ -214,7 +214,14 @@
     "      args:\n",
     "      - --persist-uri\n",
     "      - {3}\n",
-    "      env:\n",
+    "      # If you are running behind a proxy, uncomment the following lines and replace the values with your proxy URLs.\n",
+    "      # env:\n",
+    "      # - name: HTTP_PROXY\n",
+    "      #   value: <yout http proxy URL>\n",
+    "      # - name: HTTPS_PROXY\n",
+    "      #   value: <yout https proxy URL>\n",
+    "      # - name: NO_PROXY\n",
+    "      #   value: .local\n",
     "      - name: MLFLOW_S3_ENDPOINT_URL\n",
     "        value: {4}\n",
     "      - name: TRANSFORMERS_CACHE\n",
