--- a/demos/question-answering/04.serve-llm.ipynb
+++ b/demos/question-answering/04.serve-llm.ipynb
@@ -131,6 +131,14 @@
     "      - name: kserve-container\n",
     "        image: {0}\n",
     "        imagePullPolicy: Always\n",
+    "        # If you are running behind a proxy, uncomment the following lines and replace the values with your proxy URLs.\n",
+    "        # env:\n",
+    "        # - name: HTTP_PROXY\n",
+    "        #   value: <yout http proxy URL>\n",
+    "        # - name: HTTPS_PROXY\n",
+    "        #   value: <yout https proxy URL>\n",
+    "        # - name: NO_PROXY\n",
+    "        #   value: .local\n",
     "        resources:\n",
     "          requests:\n",
     "            memory: \"8Gi\"\n",
@@ -143,6 +151,14 @@
     "    containers:\n",
     "      - image: {1}\n",
     "        imagePullPolicy: Always\n",
+    "        # If you are running behind a proxy, uncomment the following lines and replace the values with your proxy URLs.\n",
+    "        # env:\n",
+    "        # - name: HTTP_PROXY\n",
+    "        #   value: <yout http proxy URL>\n",
+    "        # - name: HTTPS_PROXY\n",
+    "        #   value: <yout https proxy URL>\n",
+    "        # - name: NO_PROXY\n",
+    "        #   value: .local\n",
     "        resources:\n",
     "          requests:\n",
     "            memory: \"1Gi\"\n",
