Update kubeflow example

--- a/Data-Science/Kubeflow/Financial-Time-Series/financial_time_series_example.ipynb
+++ b/Data-Science/Kubeflow/Financial-Time-Series/financial_time_series_example.ipynb
@@ -151,21 +151,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "HOMEDIR = !echo $HOME\n",
-    "HOMEDIR = HOMEDIR[0]"
+    "# Specify the name of the mounted directory\n",
+    "user_mounted_dir_name = \"user\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fn = f\"{HOMEDIR}/user/financial-processed\""
+    "from pathlib import Path\n",
+    "fn = f\"{str(Path.home())}/{user_mounted_dir_name}/financial-processed\""
    ]
   },
   {
