Fix notebook for training mnist via kale and kfp on gpu Remove cell which creates directory that causes error

--- a/Data-Science/Kubeflow-GPU/Train_mnist_kfp_gpu.ipynb
+++ b/Data-Science/Kubeflow-GPU/Train_mnist_kfp_gpu.ipynb
@@ -143,28 +143,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a95b44d5-0f72-4da3-a01d-45fa057e5916",
-   "metadata": {
-    "tags": [
-     "block:create_output_dirs",
-     "prev:load_data"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# create dir for Kale\n",
-    "if tf.io.gfile.exists('/marshal'):\n",
-    "    tf.io.gfile.mkdir('/marshal/model_mnist.tfkeras')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "0668c17c-7b36-4b46-87c1-aed208585494",
    "metadata": {
     "tags": [
      "block:train_model_cpu",
-     "prev:create_output_dirs"
+     "prev:load_data"
     ]
    },
    "outputs": [],
@@ -187,7 +170,7 @@
    "metadata": {
     "tags": [
      "block:train_model_gpu1",
-     "prev:create_output_dirs",
+     "prev:load_data",
      "limit:nvidia.com/gpu:1"
     ]
    },
@@ -357,7 +340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
