--- a/Data-Science/MLflow/bike-sharing-mlflow.ipynb
+++ b/Data-Science/MLflow/bike-sharing-mlflow.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "---\n",
     "\n",
-    "This notebook demonstrates an example of dataset preprocessing, model training and evaluation, model tuning via MLflow tracking, finding best trained model and finally deploying the model using Seldon.\n",
+    "This notebook demonstrates an example of dataset preprocessing, model training and evaluation, model tuning via MLflow tracking, finding best trained model and finally deploying the model using KServe.\n",
     "\n",
     "---\n",
     "- **Dateset:** Bike Sharing Dataset: http://archive.ics.uci.edu/ml/machine-learning-databases/00275/Bike-Sharing-Dataset.zip\n",
@@ -21,29 +21,6 @@
     "- https://docs.databricks.com/_static/notebooks/gbt-regression.html\n",
     "- https://www.kaggle.com/pratsiuk/mlflow-experiment-automation-top-9\n",
     "- https://mlflow.org/docs/latest/tracking.html"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Configure s3 and MLFlow Details"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "\n",
-    "os.environ[\"AWS_ACCESS_KEY_ID\"] = os.environ['MLFLOW_TRACKING_TOKEN']\n",
-    "os.environ[\"AWS_SECRET_ACCESS_KEY\"] = \"s3\"\n",
-    "os.environ[\"AWS_ENDPOINT_URL\"] = 'http://local-s3-service.ezdata-system.svc.cluster.local:30000'\n",
-    "os.environ[\"MLFLOW_S3_ENDPOINT_URL\"] = os.environ[\"AWS_ENDPOINT_URL\"]\n",
-    "os.environ[\"MLFLOW_S3_IGNORE_TLS\"] = \"true\"\n",
-    "os.environ[\"MLFLOW_TRACKING_INSECURE_TLS\"] = \"true\""
    ]
   },
   {
@@ -80,7 +57,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip3 install pydotplus graphviz"
+    "\"#!pip3 install --proxy <PROXY> pydotplus graphviz seaborn\",\n",
+    "!pip3 install pydotplus graphviz seaborn"
    ]
   },
   {
