question-answering: Fix env section in the Vector Store ISVC
Fix the section that defines the environment variables of the
vector store ISVC in the second Notebook.

Closes #123

Signed-off-by: Dimitris Poulopoulos <dimitrios.poulopoulos@hpe.com>

--- a/demos/question-answering/04.serve-llm.ipynb
+++ b/demos/question-answering/04.serve-llm.ipynb
@@ -134,9 +134,9 @@
     "        # If you are running behind a proxy, uncomment the following lines and replace the values with your proxy URLs.\n",
     "        # env:\n",
     "        # - name: HTTP_PROXY\n",
-    "        #   value: <yout http proxy URL>\n",
+    "        #   value: <your http proxy URL>\n",
     "        # - name: HTTPS_PROXY\n",
-    "        #   value: <yout https proxy URL>\n",
+    "        #   value: <your https proxy URL>\n",
     "        # - name: NO_PROXY\n",
     "        #   value: .local\n",
     "        resources:\n",
@@ -151,14 +151,6 @@
     "    containers:\n",
     "      - image: {1}\n",
     "        imagePullPolicy: Always\n",
-    "        # If you are running behind a proxy, uncomment the following lines and replace the values with your proxy URLs.\n",
-    "        # env:\n",
-    "        # - name: HTTP_PROXY\n",
-    "        #   value: <yout http proxy URL>\n",
-    "        # - name: HTTPS_PROXY\n",
-    "        #   value: <yout https proxy URL>\n",
-    "        # - name: NO_PROXY\n",
-    "        #   value: .local\n",
     "        resources:\n",
     "          requests:\n",
     "            memory: \"1Gi\"\n",
