wind-turbine: Remove conda inconsistencies from README
Remove the instruction that mentions the `wind-turbine` conda
kernel from the README file, as it is no longer valid.

Instead, use the default Python 3 environment.

Signed-off-by: Dimitris Poulopoulos <dimitrios.poulopoulos@hpe.com>

--- a/demos/wind-turbine/wind-turbine.ipynb
+++ b/demos/wind-turbine/wind-turbine.ipynb
@@ -59,7 +59,7 @@
     "Execute the cell below and:\n",
     "\n",
     "1. Select `Add Endpoint`.\n",
-    "1. Select `Basic_Access`, paste your Livy endpoint, and authenticate with your credentials.\n",
+    "1. Select `Single Sign-on`, paste your Livy endpoint, and click `Add endpoint`.\n",
     "1. Select `Create Session`.\n",
     "1. Provide a name, select the `python` language, and click `Create Session`.\n",
     "\n",
