--- a/Data-Science/Ray/Fibonacci/run.ipynb
+++ b/Data-Science/Ray/Fibonacci/run.ipynb
@@ -45,9 +45,9 @@
     "    entrypoint=\"python fibonacci.py\",\n",
     "    runtime_env={\n",
     "        \"working_dir\": \"./\", \n",
-    "        # \"excludes\": ['']\n",
+    "        #\"excludes\": ['']\n",
     "    },\n",
-    "    entrypoint_num_cpus=1\n",
+    "    entrypoint_num_cpus=3\n",
     ")\n",
     "\n",
     "print(client.__dict__)\n",
@@ -59,12 +59,12 @@
     "job_status = client.get_job_status(job_id)\n",
     "get_job_logs = client.get_job_logs(job_id)\n",
     "get_job_info = client.get_job_info(job_id)\n",
-    "# Disconnect from the Ray cluster\n",
-    "ray.shutdown()\n",
     "\n",
     "print(f\"Ray job status for job_id {job_id}: {job_status}\")\n",
     "print(f\"Ray job logs for job_id {job_id}: {get_job_logs}\")\n",
-    "print(f\"Ray job info for job_id {job_id}: {get_job_info}\")"
+    "print(f\"Ray job info for job_id {job_id}: {get_job_info}\")\n",
+    "# Disconnect from the Ray cluster\n",
+    "ray.shutdown()"
    ]
   },
   {
