--- a/Data-Science/Ray-CPU/run_cpu.ipynb
+++ b/Data-Science/Ray-CPU/run_cpu.ipynb
@@ -75,7 +75,10 @@
     "get_job_logs = client.get_job_logs(job_id)\n",
     "get_job_info = client.get_job_info(job_id)\n",
     "async for lines in client.tail_job_logs(job_id):\n",
-    "    print(lines, end=\"\") "
+    "    print(lines, end=\"\") \n",
+    "\n",
+    "# Disconnect from the Ray cluster\n",
+    "ray.shutdown()"
    ]
   },
   {
