--- a/Data-Science/MLflow/bike-sharing-prediction.ipynb
+++ b/Data-Science/MLflow/bike-sharing-prediction.ipynb
@@ -114,6 +114,60 @@
     "for item, out in zip(input_data, output):\n",
     "    input_dict = dict(zip(names,item))\n",
     "    print(f\"Input Data: {input_dict} \\n\\nBike Per Hour: {out}\\n\")"
+   ],
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
+   "source": [
+    "### How to reach the KServe API externally\n",
+    "\n",
+    "#### Set the variables\n",
+    "```bash\n",
+    "DOMAIN=<hpe-example-ezaf.com>\n",
+    "USERNAME=<examle-user01>\n",
+    "PASSWORD=<example-password>\n",
+    "KC_ADDR=<keycloak.$DOMAIN>\n",
+    "```\n",
+    "\n",
+    "\n",
+    "#### Obtain access and refresh tokens\n",
+    "\n",
+    "```bash\n",
+    "response_json=$(curl -k --data \"username=$USERNAME&password=$PASSWORD&grant_type=password&client_id=ua-grant\" \"https://$KC_ADDR/realms/UA/protocol/openid-connect/token\")\n",
+    "\n",
+    "REFRESH_TOKEN=$(echo \"$response_json\" | jq -r '.refresh_token')\n",
+    "ACCESS_TOKEN=$(echo \"$response_json\" | jq -r '.access_token')\n",
+    "```\n",
+    "\n",
+    "#### Set the variables for inferencing\n",
+    "\n",
+    "```bash\n",
+    "SVC=<service>\n",
+    "MODEL_NAME=<model_name>\n",
+    "NAMESPACE=<ns>\n",
+    "```\n",
+    "\n",
+    "#### Perform inference (data is put for bike sharing example)\n",
+    "\n",
+    "```bash\n",
+    "curl --request POST \"https://$SVC.$NAMESPACE.$DOMAIN/v2/models/model/infer\" -k -H \"Authorization: Bearer $ACCESS_TOKEN\" --header 'Content-Type: application/json' --data-raw '{\"inputs\":[{\"name\":\"ndarray\",\"datatype\":\"FP32\",\"shape\":[2,12],\"data\":[[1, 2, 1, 0, 0, 6, 0, 1, 0.24, 0.2879, 0.81, 0.0000],[1, 5, 1, 0, 0, 6, 1, 1, 0.24, 0.2879, 0.81, 0.0000]]}]}'\n",
+    "```\n",
+    "\n",
+    "#### Obtain a new short-lived access token with the refresh one if needed\n",
+    "\n",
+    "```bash\n",
+    "response_json=$(curl -k --data \"grant_type=refresh_token&client_id=ua-grant&refresh_token=$REFRESH_TOKEN\" \"https://$KC_ADDR/realms/UA/protocol/openid-connect/token\")\n",
+    "ACCESS_TOKEN=$(echo \"$response_json\" | jq -r '.access_token')\n",
+    "```\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
@@ -139,3 +193,4 @@
  "nbformat": 4,
  "nbformat_minor": 4
 }
+
