--- a/Data-Science/MLflow/bike-sharing-prediction.ipynb
+++ b/Data-Science/MLflow/bike-sharing-prediction.ipynb
@@ -66,7 +66,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -114,7 +119,7 @@
     "for item, out in zip(input_data, output):\n",
     "    input_dict = dict(zip(names,item))\n",
     "    print(f\"Input Data: {input_dict} \\n\\nBike Per Hour: {out}\\n\")"
-   ],
+   ]
   },
   {
    "cell_type": "markdown",
@@ -164,16 +169,20 @@
     "```bash\n",
     "response_json=$(curl -k --data \"grant_type=refresh_token&client_id=ua-grant&refresh_token=$REFRESH_TOKEN\" \"https://$KC_ADDR/realms/UA/protocol/openid-connect/token\")\n",
     "ACCESS_TOKEN=$(echo \"$response_json\" | jq -r '.access_token')\n",
-    "```\n",
-    "\n",
-    "\n",
-    "\n"
+    "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -187,7 +196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
