--- a/Data-Science/MLflow/bike-sharing-prediction.ipynb
+++ b/Data-Science/MLflow/bike-sharing-prediction.ipynb
@@ -130,9 +130,9 @@
     }
    },
    "source": [
-    "### How to reach the KServe API externally\n",
+    "### Accessing KServe API from an External Network\n",
     "\n",
-    "#### Set the variables\n",
+    "#### Initializing Configuration Variables\n",
     "```bash\n",
     "DOMAIN=<hpe-example-ezaf.com>\n",
     "USERNAME=<examle-user01>\n",
@@ -141,7 +141,7 @@
     "```\n",
     "\n",
     "\n",
-    "#### Obtain access and refresh tokens\n",
+    "#### Acquiring Access and Refresh Tokens for Authentication\n",
     "\n",
     "```bash\n",
     "response_json=$(curl -k --data \"username=$USERNAME&password=$PASSWORD&grant_type=password&client_id=ua-grant\" \"https://$KC_ADDR/realms/UA/protocol/openid-connect/token\")\n",
@@ -150,7 +150,7 @@
     "ACCESS_TOKEN=$(echo \"$response_json\" | jq -r '.access_token')\n",
     "```\n",
     "\n",
-    "#### Set the variables for inferencing\n",
+    "#### Configuring Variables for Model Inference\n",
     "\n",
     "```bash\n",
     "SVC=<service>\n",
@@ -158,13 +158,13 @@
     "NAMESPACE=<ns>\n",
     "```\n",
     "\n",
-    "#### Perform inference (data is put for bike sharing example)\n",
+    "#### Executing Inference Request (Example: Bike Sharing Data)\n",
     "\n",
     "```bash\n",
     "curl --request POST \"https://$SVC.$NAMESPACE.$DOMAIN/v2/models/model/infer\" -k -H \"Authorization: Bearer $ACCESS_TOKEN\" --header 'Content-Type: application/json' --data-raw '{\"inputs\":[{\"name\":\"ndarray\",\"datatype\":\"FP32\",\"shape\":[2,12],\"data\":[[1, 2, 1, 0, 0, 6, 0, 1, 0.24, 0.2879, 0.81, 0.0000],[1, 5, 1, 0, 0, 6, 1, 1, 0.24, 0.2879, 0.81, 0.0000]]}]}'\n",
     "```\n",
     "\n",
-    "#### Obtain a new short-lived access token with the refresh one if needed\n",
+    "#### Renewing Access Token Using Refresh Token (When Necessary)\n",
     "\n",
     "```bash\n",
     "response_json=$(curl -k --data \"grant_type=refresh_token&client_id=ua-grant&refresh_token=$REFRESH_TOKEN\" \"https://$KC_ADDR/realms/UA/protocol/openid-connect/token\")\n",
