Add mock proxies instead of hpe internal proxy

--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -38,7 +38,7 @@
    "outputs": [],
    "source": [
     "# Specify proxy value if it's should be configured on the cluster\n",
-    "%env https_proxy=http://hpeproxy.its.hpecorp.net:80\n",
+    "%env https_proxy=http://<proxy_host>:<port>\n",
     "# Install required packages (Kubeflow Pipelines and Katib SDK).\n",
     "import sys\n",
     "!{sys.executable} -m pip install \"pyarrow>7.0.0\" \"kfp>=1.8.0,<=1.8.22\" kubeflow-katib==0.16.0"
@@ -141,27 +141,27 @@
     "env = [\n",
     "    {\n",
     "        \"name\": \"HTTP_PROXY\",\n",
-    "        \"value\": \"http://hpeproxy.its.hpecorp.net:80\"\n",
+    "        \"value\": \"http://<proxy_host>:<port>\"\n",
     "    },\n",
     "    {\n",
     "        \"name\": \"HTTPS_PROXY\",\n",
-    "        \"value\": \"http://hpeproxy.its.hpecorp.net:80\"\n",
+    "        \"value\": \"http://<proxy_host>:<port>\"\n",
     "    },\n",
     "    {\n",
     "        \"name\": \"http_proxy\",\n",
-    "        \"value\": \"http://hpeproxy.its.hpecorp.net:80\"\n",
+    "        \"value\": \"http://<proxy_host>:<port>\"\n",
     "    },\n",
     "    {\n",
     "        \"name\": \"https_proxy\",\n",
-    "        \"value\": \"http://hpeproxy.its.hpecorp.net:80\"\n",
+    "        \"value\": \"http://<proxy_host>:<port>\"\n",
     "    },\n",
     "    {\n",
     "        \"name\": \"no_proxy\",\n",
-    "        \"value\": \"10.227.212.69,10.227.0.0/16,10.96.0.1,10.96.0.0/12,10.96.0.12,10.244.0.0/16,10.43.0.0/16,.external.hpe.local,localhost,.cluster.local,.svc,.default.svc,127.0.0.1,mip-bd-vcenter-dev.mip.storage.hpecorp.net,172.20.0.2\"\n",
+    "        \"value\": \"<no_proxy_IPs_list>\"\n",
     "    },\n",
     "    {\n",
     "        \"name\": \"NO_PROXY\",\n",
-    "        \"value\": \"10.227.212.69,10.227.0.0/16,10.96.0.1,10.96.0.0/12,10.96.0.12,10.244.0.0/16,10.43.0.0/16,.external.hpe.local,localhost,.cluster.local,.svc,.default.svc,127.0.0.1,mip-bd-vcenter-dev.mip.storage.hpecorp.net,172.20.0.2\"\n",
+    "        \"value\": \"<no_proxy_IPs_list>\"\n",
     "    }\n",
     "]"
    ]
