Add mock proxies in ray examples

--- a/Data-Science/Ray-GPU/run.ipynb
+++ b/Data-Science/Ray-GPU/run.ipynb
@@ -749,7 +749,7 @@
     "        runtime_env={\n",
     "            \"working_dir\": \"./\",\n",
     "            \"pip\":[\"tensorrt\", \"tensorflow\", \"nvidia-tensorrt==99.0.0\"],\n",
-    "            \"env_vars\": {\"http_proxy\":\"http://10.78.90.46:80\",\"https_proxy\":\"http://10.78.90.46:80\"}\n",
+    "            \"env_vars\": {\"http_proxy\":\"http://<proxy_host>:<port>\",\"https_proxy\":\"http://<proxy_host>:<port>\"}\n",
     "        },\n",
     "        entrypoint_num_gpus = 1,\n",
     "    )\n",
