--- a/Data-Science/Ray-Serve/synchandle/run_serve_synchandle_approach.ipynb
+++ b/Data-Science/Ray-Serve/synchandle/run_serve_synchandle_approach.ipynb
@@ -88,7 +88,7 @@
     "    runtime_env={\n",
     "        \"working_dir\": \"./\",\n",
     "        \"pip\": [\"textblob\"],\n",
-    "        \"env_vars\": {\"http_proxy\":\"http://10.78.90.46:80\",\"https_proxy\":\"http://10.78.90.46:80\"}\n",
+    "        \"env_vars\": {\"http_proxy\":\"http://<proxy_host>:<port>\",\"https_proxy\":\"http://<proxy_host>:<port>\"}\n",
     "    },\n",
     "    entrypoint_num_cpus=1\n",
     ")\n",
