--- a/Data-Science/Ray/Anomaly-Detection-Banking/ray_acceleration_experiment_fraud_detecting_on_banking_system.ipynb
+++ b/Data-Science/Ray/Anomaly-Detection-Banking/ray_acceleration_experiment_fraud_detecting_on_banking_system.ipynb
@@ -374,7 +374,7 @@
     "    start_time = time.time()\n",
     "    ray.init(address=\"ray://kuberay-head-svc.kuberay:10001\", \n",
     "             runtime_env={\n",
-    "                #\"env_vars\":{\"http_proxy\": \"http://10.78.90.46:80\", \"https_proxy\": \"http://10.78.90.46:80\"} #needed for LR1 network\n",
+    "                #\"env_vars\":{\"http_proxy\": \"http://<proxy_host>:<port>\", \"https_proxy\": \"http://<proxy_host>:<port>\"} #needed for LR1 network\n",
     "             }\n",
     "    )\n",
     "\n",
