--- a/demos/question-answering/01.create-vectorstore.ipynb
+++ b/demos/question-answering/01.create-vectorstore.ipynb
@@ -273,9 +273,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "question-answering",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "question-answering"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
